--- a/demo_app/templates/index_template.html
+++ b/demo_app/templates/index_template.html
@@ -1,11 +1,10 @@
 <html>
     <head>
-        <title>Demo Page</title>
+        <title>Revenue</title>
     </head>
     <body>
-        <h1>that page works</h1>
+        <h1>Monthly Revenue Report</h1>
          <ul>
-            Hi
             {% for rec in dates %}
                 <li><a href="{{ rec.date|date:"c" }}">{{rec.date}}</a>, {{rec.revenue_sum}}, {{rec.clicks_sum}}</li>
             {% endfor %}
