--- a/demo_app/templates/date_template.html
+++ b/demo_app/templates/date_template.html
@@ -1,14 +1,23 @@
-<html>
-    <head>
-        <title>Publisher</title>
-    </head>
-    <body>
-        <h1>{{ q_date }}</h1>
-         <ul>
-             {% for rec in publishers %}
-                <li><a href="{{ rec.date|date:"c" }}/{{rec.publisher.id}}">{{rec.publisher.name}}</a>, {{rec.revenue_sum}}, {{rec.clicks_sum}}</li>
-            {% endfor %}
-        </ul>
-
-    </body>
-</html>
+{% extends 'base.html' %}
+{% load humanizelib %}
+{% block content %}
+    <h3>{{ q_date }}</h3>
+     <table class="table table-striped">
+    <thead>
+        <th scope="col">#</th>
+        <th scope="col">Publisher</th>
+        <th scope="col">Revenue</th>
+        <th scope="col">Clicks</th>
+    </thead>
+    <tbody>
+        {% for rec in publishers %}
+            <tr>
+                <th scope="row">{{ forloop.counter }}.&nbsp;&nbsp;</th>
+                <td><a href="{{ rec.date|date:"c" }}/{{rec.publisher.id}}">{{rec.publisher.name|title}}</a></td>
+                <td>{{ rec.revenue_sum|floatformat:2|intcomma }}</td>
+                <td>{{ rec.clicks_sum }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+    </table>
+{% endblock %}
