--- a/demo_app/templates/index_template.html
+++ b/demo_app/templates/index_template.html
@@ -1,14 +1,24 @@
-<html>
-    <head>
-        <title>Revenue</title>
-    </head>
-    <body>
-        <h1>Monthly Revenue Report</h1>
-         <ul>
-            {% for rec in dates %}
-                <li><a href="{{ rec.date|date:"c" }}">{{rec.date}}</a>, {{rec.revenue_sum}}, {{rec.clicks_sum}}</li>
-            {% endfor %}
-        </ul>
+{% extends 'base.html' %}
+{% load humanizelib %}
 
-    </body>
-</html>
+{% block content %}
+    <h3>Dept. XXX</h3>
+    <table class="table table-striped">
+    <thead>
+        <th scope="col">#</th>
+        <th scope="col">Date</th>
+        <th scope="col">Revenue</th>
+        <th scope="col">Clicks</th>
+    </thead>
+    <tbody>
+        {% for rec in dates %}
+            <tr>
+                <th scope="row">{{ forloop.counter }}.</th>
+                <td><a href="{{ rec.date|date:"c" }}">{{rec.date}}</a></td>
+                <td>{{ rec.revenue_sum|floatformat:2|intcomma }}</td>
+                <td>{{ rec.clicks_sum }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+    </table>
+{% endblock %}
