--- a/demo_app/templates/base.html
+++ b/demo_app/templates/base.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">Monthly Revenue Reports</h1>
+            <h1 class="mt-2"><a href="http://localhost:8000">Monthly Revenue Reports</a></h1>
           <hr class="mt-0 mb-4">
           {% block content %}
           {% endblock %}
